# hana

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  build.rs  debugbytecode.py  env_example  fibtailcall-ast.js  grammar.md  main.hana  rustfmt.toml
examples/: closures.hana  fib.hana  fizzbuzz.hana  hello-world.hana  mandelbrot.hana  records.hana  reverse-bintree.hana  sieve.hana  todo.hana
examples/unstable/: function.hana  xfor.hana  xrecord.hana  xwhile.hana
examples_haru/: fib-tail-call.hana  fib.hana  json.hana  sdl.hana  sieve.hana
examples_haru/unstable/: xif.hana
examples_rust/: closures.hana  closures.rs  fib.rs  fib_tail_call.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
peg/: .cargo_vcs_info.json  Cargo.toml
peg/src/: translate.rs
src/: ast.rs  cli.rs  compiler.rs  consts.rs  lib.rs  main.rs  parser(copiar).peg  parser.peg  parserw.peg
src/decorator/: Cargo.toml
src/decorator/src/: lib.rs
src/execution/: cli.rs  errors.rs  mod.rs  repl.rs
src/grammar/: expressions.rs  mod.rs  statements.rs  token.rs  values.rs
src/hanayo/: array.rs  cffi.rs  cmd.rs  dir.rs  env.rs  eval.rs  file.rs  float.rs  int.rs  io.rs  math.rs  mod.rs  proc.rs  record.rs  string.rs  sys.rs  time.rs
src/hanayo/interpreted/: json.hana
src/harumachine/: env.rs  exframe.rs  function.rs  gc.rs  hmap.rs  inside.rs  interned_string_map.rs  mod.rs  nativeval.pt  nativeval.rs  operations.rs  record.rs  string.rs  value.rs  vm.rs  vmerror.rs
src/vm/: vm.c
src/vmbindings/: env.rs  exframe.rs  foreignc.rs  function.rs  gc.rs  hmap.rs  inside.rs  interned_string_map.rs  mod.rs  nativeval.rs  operations.rs  record.rs  string.rs  value.rs  vm.rs  vmerror.rs
support/vim/ftdetect/: hana.vim
support/vim/syntax/: hana.vim
support/vscode/syntaxes/: hana.tmLanguage.json
tests/: hanayo.rs  interpreter.rs  parser.rs  vm.rs
tests/interpreted/: array-function.hana  closure.hana  dict.hana  double-ref.hana  functions.hana  gc-1.hana  gc-perf.hana  inline-function.hana  iterator.hana  native-tailret.hana  return.hana  simple-functions.hana  simple-vars.hana  simple.hana  string-perf.hana  test.hana  try-catch.hana  vm_call_exception.hana
vscode-extension/syntaxes/: hana.tmLanguage.json
