[package]
name = "haru"
version = "0.29.7"
description = "A fast, dynamically-typed general purpose scripting language"
authors = ["ffwff <mogamiriver@tuta.io>", "official-red-pack <ismaelb02@hotmail.com>"]
documentation = "https://github.com/ffwff/hana/blob/haru/DOCUMENTATION.md"
homepage = "https://github.com/ffwff/hana"
repository = "https://github.com/ffwff/hana"
readme = "README.md"
license = "GPL-3.0"
edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "ffwff/hana", branch = "haru" }
codecov = { repository = "ffwff/hana", branch = "haru", service = "github" }

[[bin]]
bench = false
path = "src/main.rs"
name = "haru"

[dependencies]
haru-decorator = { version = "0.21.0", path = "./src/decorator/" }
libc = "*"
cfg-if = "0.1.9"
ansi_term = "*"
unicode-segmentation = "1.3.0"
rustyline = { version = "*", features = [] }
jemallocator = { version = "0.3.0", optional = true }
libffi-sys = { version = "0.7.0", optional = true }

[features]
default = []
jemalloc = ["jemallocator"]
cffi = ["libffi-sys"]

[profile.release]
lto = true
panic = 'abort'
debug = true
