[package]
name = "haru"
version = "0.29.7"
description = "A fast, dynamically-typed general purpose scripting language"
authors = ["ffwff <mogamiriver@tuta.io>", "Ismaelxyz <ismaelbeli.com@gmail.com>"]
documentation = "https://github.com/ismaelxyz/hana/blob/haru/DOCUMENTATION.md"
homepage = "https://github.com/ismaelxyz/hana"
repository = "https://github.com/ismaelxyz/hana"
readme = "README.md"
license = "GPL-3.0"
edition = "2021"
build = "build.rs"


[[bin]]
bench = false
path = "src/main.rs"
name = "haru"

[dependencies]
ansi_term = "0.12.1"
cfg-if = "1.0.0"
haru-decorator = { version = "0.21.0", path = "./src/decorator/" }
libc = "0.2.161"
rustyline = "14.0.0"
unicode-segmentation = "1.12.0"

[dependencies.jemallocator]
version = "0.5.4"
optional = true

[dependencies.libffi-sys]
version = "2.3.0"
optional = true

[features]
default = []
jemalloc = ["jemallocator"]
cffi = ["libffi-sys"]
debuger = []
