[package]
name = "haru_lexer"
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/ismaelxyz/hana/"

[lib]
crate-type = ["rlib"]

[dependencies]
unicode-xid = "0.2.6"

[dependencies.unicode-properties]
version = "0.1.3"
default-features = false
features = ["emoji"]


[dev-dependencies]
expect-test = "1.4.0"