[package]
name = "haru-decorator"
description = "decorator library for haru"
documentation = "https://github.com/ismaelxyz/hana"
homepage = "https://github.com/ismaelxyz/hana"
repository = "https://github.com/ismaelxyz/hana"
version = "0.21.0"
license = "GPL-3.0"
authors = ["ffwff <mogamiriver@tuta.io>", "Ismaelxyz <ismaelbeli.com@gmail.com>"]
edition = "2018"

[lib]
name = "decorator"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"

[dependencies.syn]
version = "2.0.87"
features = ["full", "extra-traits"]